--- a/index.html
+++ b/index.html
@@ -14,10 +14,14 @@
         <!-- しこしこモード セクション -->
         <section id="shikoshikoModeSection" class="mode-section active">
             <div class="shikoshiko-layout-container">
+
+                <!-- BOX1: 上部メインエリア (画像、サイド情報、設定ボタン) -->
                 <div class="shikoshiko-box1">
                     <div class="member-image-container main-image-area" id="shikoshikoMemberImageContainer">
                         <img id="shikoshikoMemberImage" src="images/placeholder.png" alt="メンバー画像">
+                        <!-- 貼り付けられたステッカーはここにJSで追加 (ステッカー機能は廃止) -->
                     </div>
+
                     <div class="side-info-panel left-panel">
                         <div class="profile-icon-wrapper">
                             <img id="shikoshikoMemberProfileIcon" src="images/placeholder.png" alt="Member Icon" class="profile-icon">
@@ -26,12 +30,16 @@
                             <span class="icon-display">☆</span>
                         </button>
                     </div>
+
                     <button class="settings-button-右上" id="openShikoshikoSettingsModal">⚙️</button>
                 </div>
 
+                <!-- セリフとアニメーションのコンテナ -->
                 <div class="serif-animation-container">
                     <div class="serif-area">
-                        <div class="image-tags-container" id="shikoshikoImageTagsContainer" style="display: none;"></div>
+                        <div class="image-tags-container" id="shikoshikoImageTagsContainer" style="display: none;">
+                            <!-- JSで画像タグを生成 -->
+                        </div>
                         <p id="shikoshikoMemberQuote" class="member-quote">ここにセリフが表示されます</p>
                     </div>
                     <div class="animation-area" id="shikoAnimationContainer">
@@ -40,6 +48,7 @@
                     </div>
                 </div>
 
+                <!-- 下部コントロールエリア (ボタンのみ) -->
                 <div class="shikoshiko-box2-controls-only">
                     <div class="main-controls" id="shikoshikoControlsArea">
                         <button id="shikoshikoSkipButton" class="control-button skip-button">スキップ</button>
@@ -62,7 +71,7 @@
             </div>
         </section>
 
-        <!-- ギャラリーセクションは削除 -->
+        <!-- ギャラリーセクションは廃止のためHTMLから削除 -->
 
     </main>
 
@@ -77,7 +86,7 @@
                     <div class="slider-container member-sliders" id="modalShikoshikoMemberSliders"><p>読み込み中...</p></div>
                     <p class="selection-note">数値が高いほど出やすくなります (0は出ません)</p>
                 </div>
-                <!-- 背景エフェクト設定グループ削除 -->
+                <!-- 背景エフェクト設定グループは廃止のため削除 -->
                 <div class="setting-group">
                     <h4>BPM設定</h4>
                     <div class="bpm-setting">
@@ -85,7 +94,7 @@
                         <input type="number" id="modalFixedBpmInput" min="30" max="300" value="120">
                     </div>
                 </div>
-                <!-- ステッカー設定グループ削除 -->
+                <!-- ステッカー設定グループは廃止のため削除 -->
             </div>
             <div class="modal-footer">
                 <button id="saveShikoshikoSettingsButton" class="action-button primary">設定を保存</button>
